# talk-2-me

./: .env.example  .gitignore  README.md  app.py  project_structure  pyproject.toml
src/: __init__.py
src/core/: __init__.py  error_handler.py  exceptions.py  extractors.py  llm_service.py  logger.py  pdf_processor.py  tts_service.py
src/core/llm/: prompt_types.py  prompts.py  service.py
src/core/tts/: service.py
src/services/: __init__.py  pdf_service.py  processing_service.py  tts_service.py
src/ui/: __init__.py  app.py
tests/: conftest.py  test_extractors.py  test_llm_service.py  test_pdf_processor.py  test_pdf_service.py  test_prompts.py
