[tool.poetry]
name = "talk-2-me"
version = "0.1.0"
description = "A research paper analysis and interaction tool"
authors = ["scpseng@gmail.com"]
readme = "README.md"
packages = [{include = "talk-2-me"}]

[tool.poetry.dependencies]
python = ">=3.9,!=3.9.7,<4.0"
streamlit = ">=1.32.0"
pypdf2 = ">=3.0.0"
python-dotenv = ">=1.0.0"
elevenlabs = ">=0.3.0"
google-generativeai = ">=0.3.0"
google-cloud-aiplatform = ">=1.38.0"
pytest = ">=8.0.0"
pydantic = ">=2.0.0"
loguru = ">=0.7.2"
reportlab = ">=4.1.0,<5.0.0"
pymupdf = ">=1.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"